# rockit

examples/: mpc_example_asv.py  mpc_example_asv_ca.py  mpc_example_asv_ca_thrust.py  mpc_example_asv_speeds.py  mpc_example_asv_speeds_difthrust.py  mpc_example_asv_speeds_fullmodel.py  mpc_example_asv_xyreg.py  mpc_roboat.py  report.txt
examples/ASV_examples/: avoidance_cbf.py  centralized_formation_4r.py  decentralized_formation_4r.py  distributed_animation.py  fatrop_ipopt_mpc_decentralized_formation_8r.py  fatrop_kinematics_curve_path_following.py  fatrop_mpc_decentralized_formation_8r.py  fatrop_vtecs3_curve_path_following.py  ipopt_mpc_decentralized_formation_8r.py  kinematics_curve_path_following.py  kinematics_curve_planning.py  kinematics_curve_sca.py  kinematics_straight_sca.py  mpc_decentralized_arrays.npz  mpc_decentralized_formation_4r.py  mpc_decentralized_formation_8r.py  path_following_avoidance.py  report.txt  roboat_curve_path_following.py  roboat_trajectory_tracking.py  test.npz  vtecs3_curve_path_following.py  vtecs3_straight_path_following.py  wi_psi_r.py  working_integration.py
examples/ASV_examples/fatrop_definitions/: path_following.py  trajectory_tracking.py
examples/ASV_examples/fatrop_definitions/X/: casadi_codegen.c  casadi_codegen.h  casadi_codegen.json  problem_information.h
examples/ASV_examples/fatrop_definitions/Z/: casadi_codegen.c  (+2 more)
examples/ASV_examples/foobar/: casadi_codegen.c  casadi_codegen.h  casadi_codegen.json  problem_information.h
examples/ASV_examples/ipopt_definitions/: admm_ocpX.py  admm_ocpZ.py
examples/ASV_examples/ipopt_definitions/ROS_pkg/admm_test/: CMakeLists.txt  package.xml
examples/ASV_examples/ipopt_definitions/ROS_pkg/admm_test/functions/: ocpX.casadi  ocpZ.casadi  sim_asv_dyn.casadi
examples/ASV_examples/ipopt_definitions/ROS_pkg/admm_test/launch/: admm.launch
examples/ASV_examples/ipopt_definitions/ROS_pkg/admm_test/src/: admm_test.cpp
examples/ASV_examples/x1/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x2/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x3/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x4/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x5/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x6/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x7/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/x8/: casadi_codegen.c  casadi_codegen.json  problem_information.h
examples/ASV_examples/z1/: casadi_codegen.c  casadi_codegen.json
examples/ASV_examples/z2/: casadi_codegen.c  casadi_codegen.h
examples/ASV_examples/z3/: casadi_codegen.c  casadi_codegen.h
examples/ASV_examples/z4/: casadi_codegen.c  casadi_codegen.h
examples/ASV_examples/z5/: casadi_codegen.c  casadi_codegen.h
examples/ASV_examples/z6/: casadi_codegen.c  casadi_codegen.h
examples/ASV_examples/z7/: casadi_codegen.c  casadi_codegen.h  problem_information.h
examples/ASV_examples/z8/: casadi_codegen.c  casadi_codegen.h  casadi_codegen.json  problem_information.h
(+3 files in other folders)
